--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/futurist/rollup-plugin-es3#readme",
   "devDependencies": {
+    "mocha": "^3.0.2",
     "rollup": "^0.34.10"
   }
 }
